# Desafio-II-info-II

./: Arbitro.cpp  Arbitro.h  CMakeLists.txt  Confederacion.cpp  Confederacion.h  Equipo.cpp  Equipo.h  Estadisticas.cpp  Estadisticas.h  EstadisticasPartido.cpp  EstadisticasPartido.h  Fases.cpp  Fases.h  GestorArchivos.cpp  GestorArchivos.h  Grupo.cpp  Grupo.h  Jugador.cpp  Jugador.h  Lista.h  Partido.cpp  Partido.h  Torneo.cpp  Torneo.h  main.cpp
Video-explicativo-del-programa/: link.txt
informe_udea_worldcup/: informe_udea_worldcup.docx
